# lunar-navigation

./: .gitignore  README.md  run.txt
euro2moon/: README.md  package.xml  setup.cfg  setup.py
euro2moon/config/: gazebo.config  gazebo_bridge.yaml  local.rviz  nav2_params.yaml  navigate_local_only.xml
euro2moon/config/navigation/: nav2_params.yaml
euro2moon/euro2moon/: fake_path_publisher.py  fake_path_publisher2.py  fake_path_publisher3.py  obstacle_avoider.py  qr_code_detection.py  trajectory_plotting.py  webcam.py
euro2moon/launch/: gazebo.launch.py  global_path_planning.py  local_path_planning.py  navigation_launch.py  simulation.launch.py
euro2moon/meshes/o2_rover/: Empty_Link1.STL  Empty_Link11.STL  Empty_Link111.STL  Empty_Link2.STL  Empty_Link22.STL  Empty_Link222.STL  Empty_Link3.STL  Empty_Link33.STL  Empty_Link333.STL  Empty_Link4.STL  Empty_Link44.STL  Empty_Link444.STL  Empty_Link5.STL  Empty_Link55.STL  Empty_Link555.STL  hp1.STL  hp2.STL  l1.STL  l2.STL  w.STL
euro2moon/urdf/o2_rover/: model.config  model.sdf  model.urdf
euro2moon/urdf/rover/: model.config  model.sdf
euro2moon/worlds/: moon.world  moon2.world  moon_heightmap.world  moon_surface.world  plane.world
euro2moon/worlds/models/lunar_surface/: README.MD
euro2moon/worlds/models/moon/: model.sdf
euro2moon/worlds/models/moon_heightmap/: model.config  moon_heightmap.sdf
euro2moon/worlds/models/moon_surface/: model.config  moon_cropped.stl  moon_surface.sdf
euro2moon/worlds/models/qr_rock1/: model.config  qr_rock1.sdf
euro2moon/worlds/models/qr_rock2/: qr_rock2.sdf
(+85 files in other folders)
