<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>euro2moon</name>
  <version>0.0.0</version>
  <description>ROS2 Package for simulating a Moon Rover</description>
  <maintainer email="lucas.naury@sfr.fr">lucas</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>
  <depend>ros_gz_sim</depend>

  <export>
    <build_type>ament_python</build_type>

    <gazebo_ros gazebo_model_path="${prefix}/meshes"/>
  </export>



</package>
